cchr/intermediate/cchr.output
Terminals which are not used

   TOK_ERROR
   PRE_EC


Grammar

    0 $accept: main $end

    1 main: input
    2     | input TOK_RCBRAC

    3 input: /* empty */
    4      | input stmt

    5 tokenlist: tokenlist token
    6          | /* empty */

    7 etokenlist: etokenlist etoken
    8           | /* empty */

    9 stokenlist: stokenlist stoken
   10           | /* empty */

   11 functio: TOK_FUNC arglist TOK_RRBRAC
   12        | TOK_FUNC TOK_RRBRAC

   13 token: literal
   14      | functio
   15      | string
   16      | char
   17      | TOK_LCBRAC stokenlist TOK_RCBRAC
   18      | TOK_SYMB
   19      | TOK_LRBRAC TOK_RRBRAC
   20      | TOK_LRBRAC arglist TOK_RRBRAC

   21 etoken: token
   22       | TOK_SPIPE
   23       | TOK_SYMBAT

   24 stoken: etoken
   25       | TOK_SEMI

   26 exprlist: TOK_TRUE
   27         | tokenlist
   28         | tokenlist TOK_HASH TOK_SYMB
   29         | exprlist TOK_COMMA tokenlist
   30         | exprlist TOK_COMMA tokenlist TOK_HASH TOK_SYMB

   31 string: TOK_BSTRING stringparts TOK_ESTRING

   32 char: TOK_BCHAR charparts TOK_ECHAR

   33 stringparts: /* empty */
   34            | stringparts TOK_STRING

   35 charparts: /* empty */
   36          | charparts TOK_CHAR

   37 arglist: etokenlist
   38        | arglist TOK_COMMA etokenlist

   39 extlist: TOK_SYMB
   40        | extlist TOK_COMMA TOK_SYMB

   41 literal: TOK_COMMA
   42        | TOK_CONST
   43        | TOK_OP
   44        | TOK_AT
   45        | TOK_ASTER

   46 rname: TOK_SYMBAT
   47      | /* empty */

   48 rule: rname exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   49     | rname exprlist TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   50     | rname exprlist TOK_PROP exprlist TOK_SPIPE exprlist TOK_SEMI
   51     | rname exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI
   52     | rname exprlist TOK_SIMP exprlist TOK_SEMI
   53     | rname exprlist TOK_PROP exprlist TOK_SEMI

   54 stmt: TOK_CONSTRAINT constrlist TOK_SEMI
   55     | TOK_EXTERN extlist TOK_SEMI
   56     | TOK_MACRO constr etokenlist TOK_SEMI
   57     | TOK_LOGICAL type TOK_SYMB TOK_SEMI
   58     | rule

   59 constrlist: constr carglist
   60           | constrlist TOK_COMMA constr carglist

   61 carglist: /* empty */
   62         | carglist functio

   63 constr: TOK_FUNC typelist TOK_RRBRAC

   64 typelist: /* empty */
   65         | typelistc

   66 typelistc: type
   67          | typelistc TOK_COMMA type

   68 type: TOK_SYMB
   69     | type TOK_SYMB
   70     | type TOK_ASTER


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_CONSTRAINT (258) 54
TOK_TRUE (259) 26
TOK_LCBRAC (260) 17
TOK_RCBRAC (261) 2 17
TOK_SEMI (262) 25 48 49 50 51 52 53 54 55 56 57
TOK_COMMA (263) 29 30 38 40 41 60 67
TOK_AT (264) 44
TOK_SIMP (265) 48 49 51 52
TOK_PROP (266) 50 53
TOK_SPIPE (267) 22 48 49 50
TOK_BSLASH (268) 48 51
TOK_LRBRAC (269) 19 20
TOK_RRBRAC (270) 11 12 19 20 63
TOK_FUNC (271) 11 12 63
TOK_SYMBAT (272) 23 46
TOK_CONST (273) 42
TOK_SYMB (274) 18 28 30 39 40 57 68 69
TOK_OP (275) 43
TOK_EXTERN (276) 55
TOK_BSTRING (277) 31
TOK_STRING (278) 34
TOK_ESTRING (279) 31
TOK_MACRO (280) 56
TOK_ASTER (281) 45 70
TOK_BCHAR (282) 32
TOK_CHAR (283) 36
TOK_ECHAR (284) 32
TOK_LOGICAL (285) 57
TOK_HASH (286) 28 30
TOK_ERROR (287)
PRE_ENDALIST (288)
PRE_EC (289)
PRE_ELIST (290)
PRE_ETLIST (291)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
main (38)
    on left: 1 2, on right: 0
input (39)
    on left: 3 4, on right: 1 2 4
tokenlist (40)
    on left: 5 6, on right: 5 27 28 29 30
etokenlist (41)
    on left: 7 8, on right: 7 37 38 56
stokenlist (42)
    on left: 9 10, on right: 9 17
functio (43)
    on left: 11 12, on right: 14 62
token (44)
    on left: 13 14 15 16 17 18 19 20, on right: 5 21
etoken (45)
    on left: 21 22 23, on right: 7 24
stoken (46)
    on left: 24 25, on right: 9
exprlist (47)
    on left: 26 27 28 29 30, on right: 29 30 48 49 50 51 52 53
string (48)
    on left: 31, on right: 15
char (49)
    on left: 32, on right: 16
stringparts (50)
    on left: 33 34, on right: 31 34
charparts (51)
    on left: 35 36, on right: 32 36
arglist (52)
    on left: 37 38, on right: 11 20 38
extlist (53)
    on left: 39 40, on right: 40 55
literal (54)
    on left: 41 42 43 44 45, on right: 13
rname (55)
    on left: 46 47, on right: 48 49 50 51 52 53
rule (56)
    on left: 48 49 50 51 52 53, on right: 58
stmt (57)
    on left: 54 55 56 57 58, on right: 4
constrlist (58)
    on left: 59 60, on right: 54 60
carglist (59)
    on left: 61 62, on right: 59 60 62
constr (60)
    on left: 63, on right: 56 59 60
typelist (61)
    on left: 64 65, on right: 63
typelistc (62)
    on left: 66 67, on right: 65 67
type (63)
    on left: 68 69 70, on right: 57 66 67 69 70


state 0

    0 $accept: . main $end

    $default  reduce using rule 3 (input)

    main   go to state 1
    input  go to state 2


state 1

    0 $accept: main . $end

    $end  shift, and go to state 3


state 2

    1 main: input .
    2     | input . TOK_RCBRAC
    4 input: input . stmt

    TOK_CONSTRAINT  shift, and go to state 4
    TOK_RCBRAC      shift, and go to state 5
    TOK_SYMBAT      shift, and go to state 6
    TOK_EXTERN      shift, and go to state 7
    TOK_MACRO       shift, and go to state 8
    TOK_LOGICAL     shift, and go to state 9

    $end      reduce using rule 1 (main)
    $default  reduce using rule 47 (rname)

    rname  go to state 10
    rule   go to state 11
    stmt   go to state 12


state 3

    0 $accept: main $end .

    $default  accept


state 4

   54 stmt: TOK_CONSTRAINT . constrlist TOK_SEMI

    TOK_FUNC  shift, and go to state 13

    constrlist  go to state 14
    constr      go to state 15


state 5

    2 main: input TOK_RCBRAC .

    $default  reduce using rule 2 (main)


state 6

   46 rname: TOK_SYMBAT .

    $default  reduce using rule 46 (rname)


state 7

   55 stmt: TOK_EXTERN . extlist TOK_SEMI

    TOK_SYMB  shift, and go to state 16

    extlist  go to state 17


state 8

   56 stmt: TOK_MACRO . constr etokenlist TOK_SEMI

    TOK_FUNC  shift, and go to state 13

    constr  go to state 18


state 9

   57 stmt: TOK_LOGICAL . type TOK_SYMB TOK_SEMI

    TOK_SYMB  shift, and go to state 19

    type  go to state 20


state 10

   48 rule: rname . exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   49     | rname . exprlist TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   50     | rname . exprlist TOK_PROP exprlist TOK_SPIPE exprlist TOK_SEMI
   51     | rname . exprlist TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI
   52     | rname . exprlist TOK_SIMP exprlist TOK_SEMI
   53     | rname . exprlist TOK_PROP exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 21

    $default  reduce using rule 6 (tokenlist)

    tokenlist  go to state 22
    exprlist   go to state 23


state 11

   58 stmt: rule .

    $default  reduce using rule 58 (stmt)


state 12

    4 input: input stmt .

    $default  reduce using rule 4 (input)


state 13

   63 constr: TOK_FUNC . typelist TOK_RRBRAC

    TOK_SYMB  shift, and go to state 19

    $default  reduce using rule 64 (typelist)

    typelist   go to state 24
    typelistc  go to state 25
    type       go to state 26


state 14

   54 stmt: TOK_CONSTRAINT constrlist . TOK_SEMI
   60 constrlist: constrlist . TOK_COMMA constr carglist

    TOK_SEMI   shift, and go to state 27
    TOK_COMMA  shift, and go to state 28


state 15

   59 constrlist: constr . carglist

    $default  reduce using rule 61 (carglist)

    carglist  go to state 29


state 16

   39 extlist: TOK_SYMB .

    $default  reduce using rule 39 (extlist)


state 17

   40 extlist: extlist . TOK_COMMA TOK_SYMB
   55 stmt: TOK_EXTERN extlist . TOK_SEMI

    TOK_SEMI   shift, and go to state 30
    TOK_COMMA  shift, and go to state 31


state 18

   56 stmt: TOK_MACRO constr . etokenlist TOK_SEMI

    $default  reduce using rule 8 (etokenlist)

    etokenlist  go to state 32


state 19

   68 type: TOK_SYMB .

    $default  reduce using rule 68 (type)


state 20

   57 stmt: TOK_LOGICAL type . TOK_SYMB TOK_SEMI
   69 type: type . TOK_SYMB
   70     | type . TOK_ASTER

    TOK_SYMB   shift, and go to state 33
    TOK_ASTER  shift, and go to state 34


state 21

   26 exprlist: TOK_TRUE .

    $default  reduce using rule 26 (exprlist)


state 22

    5 tokenlist: tokenlist . token
   27 exprlist: tokenlist .
   28         | tokenlist . TOK_HASH TOK_SYMB

    TOK_LCBRAC   shift, and go to state 35
    TOK_AT       shift, and go to state 37
    TOK_LRBRAC   shift, and go to state 38
    TOK_FUNC     shift, and go to state 39
    TOK_CONST    shift, and go to state 40
    TOK_SYMB     shift, and go to state 41
    TOK_OP       shift, and go to state 42
    TOK_BSTRING  shift, and go to state 43
    TOK_ASTER    shift, and go to state 44
    TOK_BCHAR    shift, and go to state 45
    TOK_HASH     shift, and go to state 46

    $default  reduce using rule 27 (exprlist)

    functio  go to state 47
    token    go to state 48
    string   go to state 49
    char     go to state 50
    literal  go to state 51


state 23

   29 exprlist: exprlist . TOK_COMMA tokenlist
   30         | exprlist . TOK_COMMA tokenlist TOK_HASH TOK_SYMB
   48 rule: rname exprlist . TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   49     | rname exprlist . TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   50     | rname exprlist . TOK_PROP exprlist TOK_SPIPE exprlist TOK_SEMI
   51     | rname exprlist . TOK_BSLASH exprlist TOK_SIMP exprlist TOK_SEMI
   52     | rname exprlist . TOK_SIMP exprlist TOK_SEMI
   53     | rname exprlist . TOK_PROP exprlist TOK_SEMI

    TOK_COMMA   shift, and go to state 52
    TOK_SIMP    shift, and go to state 53
    TOK_PROP    shift, and go to state 54
    TOK_BSLASH  shift, and go to state 55


state 24

   63 constr: TOK_FUNC typelist . TOK_RRBRAC

    TOK_RRBRAC  shift, and go to state 56


state 25

   65 typelist: typelistc .
   67 typelistc: typelistc . TOK_COMMA type

    TOK_COMMA  shift, and go to state 57

    $default  reduce using rule 65 (typelist)


state 26

   66 typelistc: type .
   69 type: type . TOK_SYMB
   70     | type . TOK_ASTER

    TOK_SYMB   shift, and go to state 58
    TOK_ASTER  shift, and go to state 34

    $default  reduce using rule 66 (typelistc)


state 27

   54 stmt: TOK_CONSTRAINT constrlist TOK_SEMI .

    $default  reduce using rule 54 (stmt)


state 28

   60 constrlist: constrlist TOK_COMMA . constr carglist

    TOK_FUNC  shift, and go to state 13

    constr  go to state 59


state 29

   59 constrlist: constr carglist .
   62 carglist: carglist . functio

    TOK_FUNC  shift, and go to state 39

    $default  reduce using rule 59 (constrlist)

    functio  go to state 60


state 30

   55 stmt: TOK_EXTERN extlist TOK_SEMI .

    $default  reduce using rule 55 (stmt)


state 31

   40 extlist: extlist TOK_COMMA . TOK_SYMB

    TOK_SYMB  shift, and go to state 61


state 32

    7 etokenlist: etokenlist . etoken
   56 stmt: TOK_MACRO constr etokenlist . TOK_SEMI

    TOK_LCBRAC   shift, and go to state 35
    TOK_SEMI     shift, and go to state 62
    TOK_COMMA    shift, and go to state 36
    TOK_AT       shift, and go to state 37
    TOK_SPIPE    shift, and go to state 63
    TOK_LRBRAC   shift, and go to state 38
    TOK_FUNC     shift, and go to state 39
    TOK_SYMBAT   shift, and go to state 64
    TOK_CONST    shift, and go to state 40
    TOK_SYMB     shift, and go to state 41
    TOK_OP       shift, and go to state 42
    TOK_BSTRING  shift, and go to state 43
    TOK_ASTER    shift, and go to state 44
    TOK_BCHAR    shift, and go to state 45

    functio  go to state 47
    token    go to state 65
    etoken   go to state 66
    string   go to state 49
    char     go to state 50
    literal  go to state 51


state 33

   57 stmt: TOK_LOGICAL type TOK_SYMB . TOK_SEMI
   69 type: type TOK_SYMB .

    TOK_SEMI  shift, and go to state 67

    $default  reduce using rule 69 (type)


state 34

   70 type: type TOK_ASTER .

    $default  reduce using rule 70 (type)


state 35

   17 token: TOK_LCBRAC . stokenlist TOK_RCBRAC

    $default  reduce using rule 10 (stokenlist)

    stokenlist  go to state 68


state 36

   41 literal: TOK_COMMA .

    $default  reduce using rule 41 (literal)


state 37

   44 literal: TOK_AT .

    $default  reduce using rule 44 (literal)


state 38

   19 token: TOK_LRBRAC . TOK_RRBRAC
   20      | TOK_LRBRAC . arglist TOK_RRBRAC

    TOK_RRBRAC  shift, and go to state 69

    $default  reduce using rule 8 (etokenlist)

    etokenlist  go to state 70
    arglist     go to state 71


state 39

   11 functio: TOK_FUNC . arglist TOK_RRBRAC
   12        | TOK_FUNC . TOK_RRBRAC

    TOK_RRBRAC  shift, and go to state 72

    $default  reduce using rule 8 (etokenlist)

    etokenlist  go to state 70
    arglist     go to state 73


state 40

   42 literal: TOK_CONST .

    $default  reduce using rule 42 (literal)


state 41

   18 token: TOK_SYMB .

    $default  reduce using rule 18 (token)


state 42

   43 literal: TOK_OP .

    $default  reduce using rule 43 (literal)


state 43

   31 string: TOK_BSTRING . stringparts TOK_ESTRING

    $default  reduce using rule 33 (stringparts)

    stringparts  go to state 74


state 44

   45 literal: TOK_ASTER .

    $default  reduce using rule 45 (literal)


state 45

   32 char: TOK_BCHAR . charparts TOK_ECHAR

    $default  reduce using rule 35 (charparts)

    charparts  go to state 75


state 46

   28 exprlist: tokenlist TOK_HASH . TOK_SYMB

    TOK_SYMB  shift, and go to state 76


state 47

   14 token: functio .

    $default  reduce using rule 14 (token)


state 48

    5 tokenlist: tokenlist token .

    $default  reduce using rule 5 (tokenlist)


state 49

   15 token: string .

    $default  reduce using rule 15 (token)


state 50

   16 token: char .

    $default  reduce using rule 16 (token)


state 51

   13 token: literal .

    $default  reduce using rule 13 (token)


state 52

   29 exprlist: exprlist TOK_COMMA . tokenlist
   30         | exprlist TOK_COMMA . tokenlist TOK_HASH TOK_SYMB

    $default  reduce using rule 6 (tokenlist)

    tokenlist  go to state 77


state 53

   49 rule: rname exprlist TOK_SIMP . exprlist TOK_SPIPE exprlist TOK_SEMI
   52     | rname exprlist TOK_SIMP . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 21

    $default  reduce using rule 6 (tokenlist)

    tokenlist  go to state 22
    exprlist   go to state 78


state 54

   50 rule: rname exprlist TOK_PROP . exprlist TOK_SPIPE exprlist TOK_SEMI
   53     | rname exprlist TOK_PROP . exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 21

    $default  reduce using rule 6 (tokenlist)

    tokenlist  go to state 22
    exprlist   go to state 79


state 55

   48 rule: rname exprlist TOK_BSLASH . exprlist TOK_SIMP exprlist TOK_SPIPE exprlist TOK_SEMI
   51     | rname exprlist TOK_BSLASH . exprlist TOK_SIMP exprlist TOK_SEMI

    TOK_TRUE  shift, and go to state 21

    $default  reduce using rule 6 (tokenlist)

    tokenlist  go to state 22
    exprlist   go to state 80


state 56

   63 constr: TOK_FUNC typelist TOK_RRBRAC .

    $default  reduce using rule 63 (constr)


state 57

   67 typelistc: typelistc TOK_COMMA . type

    TOK_SYMB  shift, and go to state 19

    type  go to state 81


state 58

   69 type: type TOK_SYMB .

    $default  reduce using rule 69 (type)


state 59

   60 constrlist: constrlist TOK_COMMA constr . carglist

    $default  reduce using rule 61 (carglist)

    carglist  go to state 82


state 60

   62 carglist: carglist functio .

    $default  reduce using rule 62 (carglist)


state 61

   40 extlist: extlist TOK_COMMA TOK_SYMB .

    $default  reduce using rule 40 (extlist)


state 62

   56 stmt: TOK_MACRO constr etokenlist TOK_SEMI .

    $default  reduce using rule 56 (stmt)


state 63

   22 etoken: TOK_SPIPE .

    $default  reduce using rule 22 (etoken)


state 64

   23 etoken: TOK_SYMBAT .

    $default  reduce using rule 23 (etoken)


state 65

   21 etoken: token .

    $default  reduce using rule 21 (etoken)


state 66

    7 etokenlist: etokenlist etoken .

    $default  reduce using rule 7 (etokenlist)


state 67

   57 stmt: TOK_LOGICAL type TOK_SYMB TOK_SEMI .

    $default  reduce using rule 57 (stmt)


state 68

    9 stokenlist: stokenlist . stoken
   17 token: TOK_LCBRAC stokenlist . TOK_RCBRAC

    TOK_LCBRAC   shift, and go to state 35
    TOK_RCBRAC   shift, and go to state 83
    TOK_SEMI     shift, and go to state 84
    TOK_COMMA    shift, and go to state 36
    TOK_AT       shift, and go to state 37
    TOK_SPIPE    shift, and go to state 63
    TOK_LRBRAC   shift, and go to state 38
    TOK_FUNC     shift, and go to state 39
    TOK_SYMBAT   shift, and go to state 64
    TOK_CONST    shift, and go to state 40
    TOK_SYMB     shift, and go to state 41
    TOK_OP       shift, and go to state 42
    TOK_BSTRING  shift, and go to state 43
    TOK_ASTER    shift, and go to state 44
    TOK_BCHAR    shift, and go to state 45

    functio  go to state 47
    token    go to state 65
    etoken   go to state 85
    stoken   go to state 86
    string   go to state 49
    char     go to state 50
    literal  go to state 51


state 69

   19 token: TOK_LRBRAC TOK_RRBRAC .
